# Frame-Shift-Aware-Alignment

./: .gitignore  Day3_GWAS.ipynb  README.md  align.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test.txt
code/: README.md  blosum.py  dna_translation.py  dp_catalina_kreuer.py  fasta.py  fasta_reader.py  frameshift_aware_alignment.py  main.py
code/blosum/: 80.blosum
code/tests/: test_alignment.py  test_blosum.py  test_fasta.py  todo
runtime/: mean.csv  median.csv  plot.py  runtime.r  timing.py
src/frameshift_aware_alignment/: __init__.py  blosum.py  fasta.py  frameshift_aware_alignment.py
src/frameshift_aware_alignment/blosum/: __init__.py  blosum.py
src/frameshift_aware_alignment/fasta/: __init__.py
tests/: easy_test.txt  hard_test.txt  long_test_sequences.txt  read_fasta_test.fasta  short_test_sequences.txt  test_align_aa.fasta  test_align_aa_long.fasta  test_align_dna.fasta  test_align_dna_long.fasta  test_alignment.py  test_alignment_write.py  test_blosum.py  test_fasta.py  testing.py
