[metadata]
name = frameshift_aware_alignment
version = 0.0.1
description = Frameshift aware Needleman-Wunsch implementation for DNA and AA-Sequences without strange dependencies.
long_description = file: README.md
long_description_content_type=text/markdown
keywords = Needleman-Wunsch, alignment, frameshift, aware, DP, bio, bioinformatics
home-page = 
author = Jules Kreuer, Samira Breitling, Sebastian Meyer and Catalina Schlotterer
license = gpl-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages =
    frameshift_aware_alignment
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.20

[options.package_data]
frameshift_aware_alignment = py.typed
* = blosum_data/*

[flake8]
max-line-length = 120

[pytest]
xfail_strict=true
